--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,7 +5,7 @@ tasks:
   - init: >
       mkdir -p /home/gitpod/.config/nix &&
       echo 'sandbox = false' >> /home/gitpod/.config/nix/nix.conf &&
-      echo 'experimental-features = nix-command flakes' >> /home/gitpod/.config/nix/nix.conf
+      echo 'experimental-features = nix-command flakes' >> /home/gitpod/.config/nix/nix.conf &&
       nix develop --ignore-environment
 vscode:
   extensions:
