--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -6,6 +6,7 @@ tasks:
       mkdir -p /home/gitpod/.config/nix &&
       echo 'sandbox = false' >> /home/gitpod/.config/nix/nix.conf &&
       echo 'experimental-features = nix-command flakes' >> /home/gitpod/.config/nix/nix.conf &&
+      direnv allow &&
       nix develop --ignore-environment
 vscode:
   extensions:
